/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Interface.java to edit this template
 */
package com.mycompany.eva2_16_interfaces;

/**
 *
 * @author Alonso
 */
//NO SE PUEDE INSTANCIAR: --> SE PARECE A LA CLASE ABSTRACTA
//solo puede haber metodos publicos y abstractos
public interface mostar_datos {
    public abstract void imprimirdatos();
}
